feat: Add Navbar Logo style tweaks

--- a/src/components/navbar/burgerButton/burgerButton.module.scss
+++ b/src/components/navbar/burgerButton/burgerButton.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   height: 2rem;
   justify-content: space-around;
+  overflow: hidden;
   width: 2rem;
 
   position: relative;
